--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </section>
 
         <!-- Bootstrap Services Section -->
-        <section id="services" class="bg-green-100 pb-3 pt-5">
+        <section id="services" class="bg-green-100 pb-3 pt-5 bubbles-bg-pattern">
             
             <div class="container-lg">
                 <div class="text-center">
