coverted imgs to webp

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="container col-xxl-8 px-4 py-5">
                 <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
                     <div class="col-10 col-sm-8 col-lg-6">
-                        <img src="images/bonbon-line-vacuum-cleaner-and-cleaning-items.png" class="d-block mx-lg-auto img-fluid" alt="vacumn cleaner" width="438" height="456" loading="lazy">
+                        <img src="images/bonbon-line-vacuum-cleaner-and-cleaning-items.webp" width="438" height="456" class="d-block mx-lg-auto img-fluid" alt="vacumn cleaner">
                     </div>
                     <div class="col-lg-6">
                         <h1 class="display-5 fw-bold lh-1 mb-3">Let <em class="text-green-600">us</em> do the scrubbing to make your home <em class="text-yellow-500">bright.</em></h1>
@@ -161,21 +161,21 @@
                 <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
 
                     <div class="feature col text-800 text-center text-100 d-flex flex-column align-items-center py-4">
-                        <img class="rounded-circle" src="images/man-smiling.png" alt="face of man smiling" style="height:100px;">
+                        <img class="rounded-circle" src="images/man-smiling.webp" width="300" height="300" alt="face of man smiling" style="height:100px;">
                         <h3  class="text-primary py-1">John Doe</h3>
                         <p class="lead">"My house has never been this clean."</p>
                         <p><small>Photo by <a href="https://unsplash.com/@charlesetoroma?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Charles Etoroma</a> on <a href="https://unsplash.com/photos/95UF6LXe-Lo?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></small></p>
                     </div>
                 
                     <div class="feature col text-800 text-center text-100 d-flex flex-column align-items-center py-4">
-                        <img class="rounded-circle" src="images/woman-smiling.png" alt="face of woman smiling" style="height: 100px">
+                        <img class="rounded-circle" src="images/woman-smiling.webp" width="300" height="300" alt="face of woman smiling" style="height: 100px">
                         <h3 class="text-primary py-1">Jane Doe</h3>
                         <p class="lead">"It's like having a new kitchen."</p>
                         <p><small>Photo by <a href="https://unsplash.com/@gustav1love?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Leyli Nova</a> on <a href="https://unsplash.com/photos/gd0qpyteVFY?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></small></p>
                     </div>
                
                     <div class="feature col text-800 text-center text-100 d-flex flex-column align-items-center py-4">
-                        <img class="rounded-circle" src="images/man-smiling-beard.png" alt="face of man smiling with a beard" style="height:100px;">
+                        <img class="rounded-circle" src="images/man-smiling-beard.webp" width="300" height="300" alt="face of man smiling with a beard" style="height:100px;">
                         <h3 class="text-primary py-1">John Smith</h3>
                         <p class="lead">"I could never get my bathroom this clean."</p>
                         <p><small>Photo by <a href="https://unsplash.com/@mebradus?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">M. Brauer</a> on <a href="https://unsplash.com/photos/W49xnqoy6oc?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></small></p>
