corrected img sizes

--- a/index.html
+++ b/index.html
@@ -161,21 +161,21 @@
                 <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
 
                     <div class="feature col text-800 text-center text-100 d-flex flex-column align-items-center py-4">
-                        <img class="rounded-circle" src="images/man-smiling.webp" width="300" height="300" alt="face of man smiling" style="height:100px;">
+                        <img class="rounded-circle" src="images/man-smiling-sm.webp" width="100" height="100" alt="face of man smiling">
                         <h3  class="text-primary py-1">John Doe</h3>
                         <p class="lead">"My house has never been this clean."</p>
                         <p><small>Photo by <a href="https://unsplash.com/@charlesetoroma?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Charles Etoroma</a> on <a href="https://unsplash.com/photos/95UF6LXe-Lo?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></small></p>
                     </div>
                 
                     <div class="feature col text-800 text-center text-100 d-flex flex-column align-items-center py-4">
-                        <img class="rounded-circle" src="images/woman-smiling.webp" width="300" height="300" alt="face of woman smiling" style="height: 100px">
+                        <img class="rounded-circle" src="images/woman-smiling-sm.webp" width="100" height="100" alt="face of woman smiling">
                         <h3 class="text-primary py-1">Jane Doe</h3>
                         <p class="lead">"It's like having a new kitchen."</p>
                         <p><small>Photo by <a href="https://unsplash.com/@gustav1love?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Leyli Nova</a> on <a href="https://unsplash.com/photos/gd0qpyteVFY?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></small></p>
                     </div>
                
                     <div class="feature col text-800 text-center text-100 d-flex flex-column align-items-center py-4">
-                        <img class="rounded-circle" src="images/man-smiling-beard.webp" width="300" height="300" alt="face of man smiling with a beard" style="height:100px;">
+                        <img class="rounded-circle" src="images/man-smiling-beard-sm.webp" width="100" height="100" alt="face of man smiling with a beard">
                         <h3 class="text-primary py-1">John Smith</h3>
                         <p class="lead">"I could never get my bathroom this clean."</p>
                         <p><small>Photo by <a href="https://unsplash.com/@mebradus?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">M. Brauer</a> on <a href="https://unsplash.com/photos/W49xnqoy6oc?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></small></p>
