added meta description for SEO

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Marcus Hugo's demo Boostrap 5 website for a fictional cleaning service.">
     <!-- Local Custom Bootstrap -->
     <link rel="stylesheet" href="/dist/main.min.css">
     <!-- Bootstrap Icons -->
