changed theme name and colors

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
-    <title>Bright Cleaning</title>
+    <title>Cleaning</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
 
-                <a class="navbar-brand" href="#"><i class="bi bi-emoji-smile"></i> Bright Cleaning</a>
+                <a class="navbar-brand" href="#"><i class="bi bi-emoji-smile"></i> Cleaning Company</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -56,7 +56,7 @@
                         <img src="images/bonbon-line-vacuum-cleaner-and-cleaning-items.webp" width="438" height="456" class="d-block mx-lg-auto img-fluid" alt="vacumn cleaner">
                     </div>
                     <div class="col-lg-6">
-                        <h1 class="display-5 fw-bold lh-1 mb-3">Let <em class="text-green-600">us</em> do the scrubbing to make your home <em class="text-yellow-500">bright.</em></h1>
+                        <h1 class="display-5 fw-bold lh-1 mb-3">Let <em class="text-700">us</em> do the scrubbing to make your home <em class="text-green-600">clean.</em></h1>
                         <p class="lead">From countertops, to hardwood floors, to carpets, we strive to make your home clean with gentle cleaning products.</p>
                         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                         <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Schedule Now</button>
